--- a/index.html
+++ b/index.html
@@ -14,29 +14,30 @@
 <body>
 
   <div class="container">
-    <div class="container__desktop">
+    <div class="desktop">
       <div class="previous_number"></div>
       <div class="current_number"></div>
     </div>
-    <div class="container__buttonbox">
-      <button class="container__buttonbox__button num">7</button>
-      <button class="container__buttonbox__button num">8</button>
-      <button class="container__buttonbox__button num">9</button>
-      <button class="container__buttonbox__button btn-del">del</button>
-      <button class="container__buttonbox__button num">4</button>
-      <button class="container__buttonbox__button num">5</button>
-      <button class="container__buttonbox__button num">6</button>
-      <button class="container__buttonbox__button operator">+</button>
-      <button class="container__buttonbox__button num">1</button>
-      <button class="container__buttonbox__button num">2</button>
-      <button class="container__buttonbox__button num">3</button>
-      <button class="container__buttonbox__button operator">-</button>
-      <button class="container__buttonbox__button num">.</button>
-      <button class="container__buttonbox__button num">0</button>
-      <button class="container__buttonbox__button operator">/</button>
-      <button class="container__buttonbox__button operator">×</button>
-      <button class="container__buttonbox__button btn-reset">reset</button>
-      <button class="container__buttonbox__button btn-result">=</button>
+    
+    <div class="buttonbox">
+      <button class="button num">7</button>
+      <button class="button num">8</button>
+      <button class="button num">9</button>
+      <button class="button btn-del">del</button>
+      <button class="button num">4</button>
+      <button class="button num">5</button>
+      <button class="button num">6</button>
+      <button class="button operator">+</button>
+      <button class="button num">1</button>
+      <button class="button num">2</button>
+      <button class="button num">3</button>
+      <button class="button operator">-</button>
+      <button class="button num">.</button>
+      <button class="button num">0</button>
+      <button class="button operator">/</button>
+      <button class="button operator">×</button>
+      <button class="button btn-reset">reset</button>
+      <button class="button btn-result">=</button>
   </div>
 
 </body>
