--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 
+  <div class="heading">
+    <img src="/images/LOGO.jpg" alt="" class="logo">
+  </div>
+
   <div class="container">
     <div class="desktop">
       <div class="previous_number"></div>
