--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="heading">
-    <img src="/images/LOGO.jpg" alt="" class="logo">
+    <img src="./images/logo.jpg" alt="" class="logo">
   </div>
 
   <div class="container">
